# truck_slam

./: README.md  run_localization_mapping.sh  run_map_localization.sh
src/gnss_ins_msgs/: CMakeLists.txt  package.xml
src/gnss_ins_msgs/include/gnss_ins_msgs/can_message/: gnss_ins_can_msg_decode_motorola.hpp
src/gnss_ins_msgs/include/gnss_ins_msgs/utils/: utils.hpp
src/gnss_ins_msgs/launch/: gnss_ins_msg_decode.launch.py
src/gnss_ins_msgs/src/: gnss_ins_msg_decode_node.cpp
src/localization_mapping/: CMakeLists.txt  package.xml
src/localization_mapping/config/: config.yaml  ekf_gps.yaml  map_localization.yaml
src/localization_mapping/doc/: 问题.md
src/localization_mapping/include/localization_mapping/back_end/: back_end.hpp  back_end_flow.hpp
src/localization_mapping/include/localization_mapping/data_pretreat/: data_pretreat.hpp  data_pretreat_flow.hpp
src/localization_mapping/include/localization_mapping/front_end/: front_end.hpp  front_end_flow.hpp
src/localization_mapping/include/localization_mapping/global_defination/: global_defination.h  global_defination.h.in
src/localization_mapping/include/localization_mapping/imu_preintegration/: imu_preintegration.hpp
src/localization_mapping/include/localization_mapping/loop_closure/: loop_closure.hpp  loop_closure_flow.hpp
src/localization_mapping/include/localization_mapping/map_matching/: map_matching.hpp  map_matching_flow.hpp
src/localization_mapping/include/localization_mapping/utils/model/filter/: box_filter.hpp
src/localization_mapping/include/localization_mapping/utils/model/registration/: icp_registration.hpp  ndt_registration.hpp  registration_interface.hpp
src/localization_mapping/include/localization_mapping/utils/model/scan_context/: KDTreeVectorOfVectorsAdaptor.h  scan_context_manager.hpp
src/localization_mapping/include/localization_mapping/utils/sensor_data/: costom_point_type.hpp
src/localization_mapping/include/localization_mapping/utils/tools/: tools.hpp
src/localization_mapping/launch/: run_localization_mapping.launch.py  run_map_localization.launch.py
src/localization_mapping/rviz/: run.rviz  run_map_localization.rviz
src/localization_mapping/src/back_end/: back_end.cpp  back_end_flow.cpp
src/localization_mapping/src/data_pretreat/: data_pretreat.cpp  data_pretreat_flow.cpp
src/localization_mapping/src/front_end/: front_end.cpp  front_end_flow.cpp
src/localization_mapping/src/imu_preintegration/: imu_preintegration.cpp
src/localization_mapping/src/loop_closure/: loop_closure.cpp  loop_closure_flow.cpp
src/localization_mapping/src/map_matching/: map_matching.cpp  map_matching_flow.cpp
src/localization_mapping/src/node/: back_end_node.cpp  data_pretreat_node.cpp  front_end_node.cpp  imu_preintegration_node.cpp  loop_closure_node.cpp  map_matching_node.cpp
src/localization_mapping/src/utils/model/filter/: box_filter.cpp
src/localization_mapping/src/utils/model/registration/: icp_registration.cpp  ndt_registration.cpp
src/localization_mapping/src/utils/model/scan_context/: scan_context_manager.cpp
src/localization_mapping/src/utils/tools/: tools.cpp
src/msg_interface/: CMakeLists.txt  package.xml
src/msg_interface/msg/: CloudInfo.msg  KeyFrame.msg  KeyFramePose.msg  LoopPose.msg
src/ros2_socketcan/: CMakeLists.txt
src/ros2_socketcan/launch/: socket_can_receiver.launch.py  socket_can_sender.launch.py
src/ros2_socketcan/src/: socket_can_receiver_node.cpp  socket_can_sender_node.cpp
src/rslidar_sdk/config/: config.yaml
src/rslidar_sdk/src/rs_driver/src/rs_driver/driver/decoder/: decoder_RSP80.hpp
src/rslidar_sdk/src/source/: source_pointcloud_ros.hpp
